<resources>
    <string name="app_name">Biography</string>
    <!--<string-array name="biolist">
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>
        <item>Apj abdul kalam</item>


    </string-array>-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailAct</string>
    <string name="title_setting">Settring</string>
    <string name="title_listen">Listen</string>
    <string name="title_share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_language">Language</string>

    <string name="pref_night_mode_title">Night Mode</string>
    <string name="pref_night_mode">Start Night Mode so you can read with easy in deam Light..
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_choose_language">Click to  choose language</string>
    <string-array name="pref_example_list_titles" id="language">
        <item>Hindi</item>
        <item>English</item>
        <!-- <item>Never</item>-->
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <!--        <item>-1</item>-->
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_text_size">Text size</string>

    <string name="pref_title_text_size">Text size</string>
    <string-array name="pref_sync_frequency_titles">
        <item>small</item>
        <item>medium</item>
        <item>Large</item>
        <item>Extra Large</item>

    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>80</item>

    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_night_mode">Night Mode</string>

    <string name="pref_title_night_mode">Night mode on/off</string>

    <string name="pref_title_ringtone">Ringtone</string>


    <string name="pref_title_vibrate">Vibrate</string>




    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_night_mode">Night mode</string>
    <string name="to_read_in_deam_light">To read the  stroy in deam light</string>
    <string name="text_size">Text size of story</string>
    <string name="summary_upload_video_quality">text size of stories</string>
    <string name="TextSize">TextSize</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">this application for the person who havings so many ambitions but no motivation </string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Write in review so that we know your valuable feedback!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">More App's</string>
    <string name="summary_trymore">try more application </string>
    <string name="url_trymore">https://play.google.com/store/apps/developer?id=DO_BIG</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_night_mode">key_night_mode</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_text_size">text_size</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
</resources>
